--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,36 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #ff9c0e;
+  --ifm-color-primary-dark: #e68a0c;
+  --ifm-color-primary-darker: #d4790a;
+  --ifm-color-primary-darkest: #b86608;
+  --ifm-color-primary-light: #ffab1a;
+  --ifm-color-primary-lighter: #ffb824;
+  --ifm-color-primary-lightest: #ffc32e;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.05);
+  --ifm-footer-background-color: #141312;
+  --ifm-footer-color: #b86608;
+  --ifm-background-color: #ffffff;
+  --ifm-footer-link-color: #ff9c0e;
+  --ifm-footer-link-hover-color: #e68a0c;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #f7c804;
+  --ifm-color-primary-dark: #e6b004;
+  --ifm-color-primary-darker: #d4a104;
+  --ifm-color-primary-darkest: #b88503;
+  --ifm-color-primary-light: #f8cb0a;
+  --ifm-color-primary-lighter: #f9d212;
+  --ifm-color-primary-lightest: #fad71a;
+  --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.1);
+  --ifm-footer-background-color: #141312;
+  --ifm-footer-color: #b88503;
+  --ifm-background-color: #272624;
+  --ifm-footer-link-color: #f7c804;
+  --ifm-footer-link-hover-color: #e6b004;
 }
